--- a/src/app/cv-irma/academic/academic-row-titles/academic-row-titles.component.html
+++ b/src/app/cv-irma/academic/academic-row-titles/academic-row-titles.component.html
@@ -1,15 +1,16 @@
-<div class="container academic-row">
-    <div class="row">
-      <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles">
-        <strong>Degree</strong>
-      </div>
-      <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles">
-        <strong>Year</strong>
-      </div>
-      <div class="col-xs-6 col-sm-6 col-md-6 academic-row-titles"> <strong>Institute/University</strong> </div>
-      <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles"> <strong>Percentage/CGPA</strong> </div>
+<div class="container academic-row"  >
+  <div class="row">
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable>
+      <strong>Degree</strong>
     </div>
-  
-    
-  
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable>
+      <strong>Year</strong>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-6 academic-row-titles" ngDraggable>
+      <strong>Institute/University</strong>
+    </div>
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable>
+      <strong>Percentage/CGPA</strong>
+    </div>
   </div>
+</div>
