--- a/src/app/cv-irma/academic/academic-row/academic-row.component.html
+++ b/src/app/cv-irma/academic/academic-row/academic-row.component.html
@@ -1,15 +1,13 @@
 <div class="container academic-row">
-  <div class="row">
-    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles">
-      <strong>Degree</strong>
+  <div class="row" *ngFor="let academic of academics">
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable>
+      {{ academic.course }}
     </div>
-    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles">
-      <strong>Year</strong>
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable>
+      {{ academic.course }}
     </div>
-    <div class="col-xs-6 col-sm-6 col-md-6 academic-row-titles"> <strong>Institute/University</strong> </div>
-    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles"> <strong>Percentage/CGPA</strong> </div>
+    <div class="col-xs-6 col-sm-6 col-md-6 academic-row-titles" ngDraggable> {{ academic.institute }} </div>
+    <div class="col-xs-2 col-sm-2 col-md-2 academic-row-titles" ngDraggable> {{ academic.cgpa }}</div>
   </div>
-
-  
 
 </div>
