--- a/src/app/cv-irma/academic/academic.component.html
+++ b/src/app/cv-irma/academic/academic.component.html
@@ -1,11 +1,12 @@
-<div class="row">
-  <div class="col-xs-12 col-md-12 col-sm-12" ngDraggable>
-    <div class="text-uppercase academic">
+<div class="row " [ngDraggable]="rowDraggable">
+  <div class="col-xs-12 col-md-12 col-sm-12">
+    <div class="text-uppercase academic" [ngDraggable]="childDraggable">
       <h5>Academic Qualification</h5>
     </div>
 
-        <app-academic-row-titles></app-academic-row-titles>
+    <app-academic-row-titles></app-academic-row-titles>
 
-    
+    <app-academic-row></app-academic-row>
+
   </div>
 </div>
