--- a/src/app/cv-irma/name/name.component.html
+++ b/src/app/cv-irma/name/name.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row" >
-    <div class="name" ngDraggable>
+    <div class="name resizable-widget" ngDraggable >
       <h1>Aditi Rao</h1>
     </div>
   </div>
