--- a/src/app/cv-irma/cv-irma.component.html
+++ b/src/app/cv-irma/cv-irma.component.html
@@ -2,4 +2,14 @@
     <app-name></app-name>
     <br>
     <app-academic></app-academic>
+    <br>
+    <app-vfs></app-vfs>
+    <br>
+    <app-academic-projects></app-academic-projects>
+    <br>
+    <app-professional-exp></app-professional-exp>
+    <br>
+    <app-positon-of-responsibility></app-positon-of-responsibility>
+    <br>
+    <app-achievements></app-achievements>
 </div>
