--- a/src/app/cv-irma/name/name.component.html
+++ b/src/app/cv-irma/name/name.component.html
@@ -1,12 +1,17 @@
 <div class="container">
-  <div class="row" >
-    <div class="name resizable-widget" ngDraggable >
-      <h1>Aditi Rao</h1>
+  <div class="row">
+    <div class="col-xs-12 col-md-12 col-sm-12">
+      <div class="name resizable-widget" ngDraggable>
+        <h1>Aditi Rao</h1>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="gender" ngDraggable>
-      <h4>Female</h4>
+
+  <div class="col-xs-12 col-md-12 col-sm-12">
+    <div class="row">
+      <div class="gender" ngDraggable>
+        <h4>Female</h4>
+      </div>
     </div>
   </div>
 </div>
