--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+.global-row{
+  border: 1px solid grey;
+  padding: 0 10px;
+}
+
+.v-center {
+  display: flex;
+  align-items: center;
+}
+
+.global-heading{
+  background: lightgrey;
+  width: 100%;
+  padding: 2px 10px;
+}
