--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div class="container main-card">
-  <div class="row" >
-    <div class="col-xs-12 col-md-12 col-lg-12">
-      <mat-card><app-cv-irma></app-cv-irma></mat-card>
-    </div>
-  </div>
-</div>
+<router-outlet>
+</router-outlet>
