--- a/src/app/cv-irma/academic-projects/academic-projects.component.html
+++ b/src/app/cv-irma/academic-projects/academic-projects.component.html
@@ -29,8 +29,8 @@
 
                 <div class="row global-row" ngResizable ngDraggable>
                   <div class="col-xs-12 col-sm-12 col-md-12 resizable-widget">
-                    <ul *ngFor="let description of academic.descriptions">
-                      <li> {{ description }} </li>
+                    <ul>
+                      <li> {{ academic.descriptions }} </li>
                     </ul>
                   </div>
                 </div>
