--- a/src/app/cv-irma/academic/academic.component.html
+++ b/src/app/cv-irma/academic/academic.component.html
@@ -34,7 +34,7 @@
         {{ academic.course }}
       </div>
       <div class="col-xs-2 col-sm-2 col-md-2 global-row" ngDraggable>
-        {{ academic.course }}
+        {{ academic.year }}
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 global-row" ngDraggable> {{ academic.institute }} </div>
       <div class="col-xs-2 col-sm-2 col-md-2 global-row" ngDraggable> {{ academic.cgpa }}</div>
