--- a/src/app/cv-irma/positon-of-responsibility/positon-of-responsibility.component.html
+++ b/src/app/cv-irma/positon-of-responsibility/positon-of-responsibility.component.html
@@ -15,15 +15,15 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-12 col-sm-12">
+      <!-- <div class="col-xs-12 col-md-12 col-sm-12">
         <div class="row" *ngFor="let postionOfResponsibility of postionOfResponsibilities">
           <div class="col-xs-2 col-sm-2 col-md-2 global-row" ngDraggable>
             {{ postionOfResponsibility.designation }}
           </div>
           <div class="col-xs-9 col-sm-9 col-md-9 global-row" ngDraggable>
             <div class="col-xs-12 col-sm-12 col-md-12 resizable-widget">
-              <ul *ngFor="let detail of postionOfResponsibility.details">
-                <li> {{ detail }} </li>
+              <ul >
+                <li> {{ postionOfResponsibility.details }} </li>
               </ul>
             </div>
           </div>
@@ -31,7 +31,25 @@
             {{ postionOfResponsibility.year }}
           </div>
         </div>
+      </div> -->
+
+      <div class="col-xs-12 col-md-12 col-sm-12">
+        <div class="row" *ngFor="let postionOfResponsibility of postionOfResponsibilities">
+          <div class="col-xs-2 col-sm-2 col-md-2 global-row" ngDraggable>
+            {{ postionOfResponsibility.designation }}
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9 global-row" ngDraggable>
+            <div class="col-xs-12 col-sm-12 col-md-12 resizable-widget" 
+            [innerHtml] = "postionOfResponsibility.details">
+              
+            </div>
+          </div>
+          <div class="col-xs-1 col-sm-1 col-md-1 global-row" ngDraggable>
+            {{ postionOfResponsibility.year }}
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 
