--- a/src/app/cv-irma/name/name.component.html
+++ b/src/app/cv-irma/name/name.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-12 col-sm-12">
       <div class="name resizable-widget" ngDraggable>
-        <h1>Aditi Rao</h1>
+        <h1> {{ name }} </h1>
       </div>
     </div>
   </div>
@@ -10,7 +10,7 @@
   <div class="col-xs-12 col-md-12 col-sm-12">
     <div class="row">
       <div class="gender" ngDraggable>
-        <h4>Female</h4>
+        <h4> {{ gender }} </h4>
       </div>
     </div>
   </div>
