--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,14 @@
   align-items: center;
 }
 
+.spacer{
+  flex: 1 1 auto;
+}
+
 .global-heading{
   background: lightgrey;
   width: 100%;
   padding: 2px 10px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
